# mavica_411_decoder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
mavica_411/: Cargo.toml
mavica_411/src/: lib.rs
mavica_411_tool/: Cargo.toml
mavica_411_tool/src/: bitmap.rs  main.rs
src/: MVC-654F.411  main.rs
test_images/: MVC-655M.411  MVC-656M.411  MVC-657F.411  MVC-658F.411  MVC-659F.411  MVC-660F.411  MVC-661F.411  MVC-662F.411  MVC-663F.411  MVC-664F.411  MVC-665F.411  MVC-666F.411
