[workspace]
resolver = "3"
members = ["mavica_411", "mavica_411_tool"]

[workspace.package]
version = "1.0.0"
authors = ["G2-Games <ke0bhogsg@gmail.com>"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
mavica_411 = { path = "./mavica_411" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "fat"
opt-level = 3
strip = true
panic = "abort"
codegen-units = 1
