[package]
name = "mavica_411_tool"
description = "A simple Sony Mavica .411 thumbnail decoder."
version.workspace = true
authors.workspace = true
license.workspace = true
publish = false
edition = "2024"

[[bin]]
name = "mavica_411"
path = "src/main.rs"    # The source file of the target.

[features]
fixed = ["mavica_411/fixed"]

[dependencies]
mavica_411.workspace = true
